# university_management

./: .gitignore  pyproject.toml
university_management/: db.sqlite3  pytest.ini
university_management/university/: admin.py  models.py  serializers.py  urls.py  views.py
university_management/university/migrations/: 0001_initial.py  0002_teacher.py
university_management/university/tests/: test_departments.py  test_teacher.py
university_management/university_management/: asgi.py  settings.py  urls.py  wsgi.py
